--- a/index.html
+++ b/index.html
@@ -162,6 +162,34 @@
         </div>
         <div class = "side-large white">
            <div class = "projectImageBox projectImageBox-left grey absolute fill">
+<img class = "border" src = "images/dance.png"/>
+           </div>
+          <div class = "projectTextBox white absolute">
+            <a href = "https://editor.p5js.org/sravyad/full/3uDy5mkQ5"><h1> Dance Vision </h1></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class = "page white">
+        <div class = "side-large white">
+          <div class = "projectTextBox white absolute">
+            <a href = "https://www.youtube.com/playlist?list=PLTVLQ9otusrDDc_N2-E8AW1XrZ6Ts_U-H"><h1> Performances </h1></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class = "projectImageBox grey absolute fill">
+            <img class = "border" src = "images/jan.png"/>
+</div>
+        </div>
+        <div class = "side-small blue">
+        </div>
+      </div>
+      <div class = "page white">
+        <div class = "side-small blue">
+        </div>
+        <div class = "side-large white">
+           <div class = "projectImageBox projectImageBox-left grey absolute fill">
 <img class = "border" src = "images/madlib.png"/>
            </div>
           <div class = "projectTextBox white absolute">
