--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
           <div class = "textbox border">
             <h1>HEY THERE!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p>My name is Jahnavi Vishnubhotla. I'm an art and music obsessed polyglot with a thirst for knowledge. I love playing the sitar and diving into subjects both known and unknown. Thanks!</p>
           </div>
 
           </div>
@@ -148,7 +148,7 @@
         <div class = "side-large white">
           <div class = "projectTextBox white absolute">
             <a href = "https://editor.p5js.org/jahnavivish/present/wfj5nbayv"><h1> Audio Vaporwave Visualizer </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I created this audio visualiser over a span of two weeks around mid-July of 2020, researching design and computer concepts such as Perlin Noise. With the Perlin Noise, I’ve made a terrain which bounces based on the amplitude, or volume, of the song it is paired with. In this specific example, I’ve chosen the song, “Ouke,” by Paco Amoroso and Ca7riel, and if one presses the play button, one can see that the moon, “pink ocean-like-net,” and the stars move relative to the amplitude/volume. The style was based off of the Vaporware/Vaporwave aesthetic which uses bold colors! I utilised the p5.js online editor and played around. I did this project alone, using javascript to code it all. This item is significant because it shows my artistic ability and will to problem solve, connecting music, design, and javascript to create something cool and fun!</p>
           </div>
           <div class = "projectImageBox grey absolute">
           <img class = "border" src = "images/vis.png"/>
@@ -166,7 +166,7 @@
            </div>
           <div class = "projectTextBox white absolute">
             <a href = "https://editor.p5js.org/sravyad/full/3uDy5mkQ5"><h1> Dance Vision </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Using the posenet.js library, I used the p5.js editor to create a machine learning project which detects certain postures of the Bharatanatyam Indian Classical Dance Forms. I started fiddling with this app around January of 2020, but the project finished in April.  For example, aramandi, or half-sitting position, is perfect when there is a certain angle created from the legs, bent at the knee. The resulting shape should be a rhombus; this app detects whether or not the perfect aramandi is achieved while dancing! This project was also done in javascript. Dance Vision is significant because I mixed two things I love, dance and technology, to generate something applicable in real life. I tutor dance students, and this app has come in handy when they try to self-correct at home!</p>
           </div>
         </div>
 
@@ -221,7 +221,8 @@
         </div>
           <div class = "projectTextBox white absolute">
 <a href = "outfit_picker/index.html"><h1> Outfit Picker </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Inspired by the movie clueless, I made an outfit picker out of the clothes that are in my closet. Now I can just go to my website and scroll through my closet rather than get up and go to my closet. Best project for when I feel lazy!
+</p>
           </div>
         </div>
 
@@ -230,7 +231,7 @@
         <div class = "side-large white">
           <div class = "projectTextBox white absolute">
             <a href = "https://www.youtube.com/playlist?list=PLTVLQ9otusrDDc_N2-E8AW1XrZ6Ts_U-H"><h1> Performances </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I love immersing myself in the Indian classical art forms which I have been practicing and polishing for over half of my life!</p>
           </div>
           <div class = "projectImageBox grey absolute fill">
             <img class = "border" src = "images/jan.png"/>
