--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class = "side-large white">
           <div class = "projectTextBox white absolute">
             <a href = "https://www.youtube.com/playlist?list=PLTVLQ9otusrDDc_N2-E8AW1XrZ6Ts_U-H"><h1> Performances </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I love immersing myself in the Indian classical art forms which I have been practicing and polishing for over half of my life!</p>
           </div>
           <div class = "projectImageBox grey absolute fill">
             <img class = "border" src = "images/jan.png"/>
@@ -194,7 +194,7 @@
            </div>
           <div class = "projectTextBox white absolute">
             <a href = "madlibs.html"><h1> Madlibs </h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>A code-version of a childhood favourite game!</p>
           </div>
         </div>
 
@@ -203,7 +203,7 @@
         <div class = "side-large white">
           <div class = "projectTextBox white absolute">
             <a href = "game.html"><h1> Abstract Dino Game</h1></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>A small project reflecting our favourite wifi-free dinosaur game!</p>
           </div>
           <div class = "projectImageBox grey absolute fill">
             <img class = "border" src = "images/dino.png"/>
@@ -226,15 +226,6 @@
           </div>
         </div>
 
-      </div>
-      <div class = "page white">
-        <div class = "side-large white">
-          <div class = "projectTextBox white absolute">
-            <a href = "https://www.youtube.com/playlist?list=PLTVLQ9otusrDDc_N2-E8AW1XrZ6Ts_U-H"><h1> Performances </h1></a>
-            <p>I love immersing myself in the Indian classical art forms which I have been practicing and polishing for over half of my life!</p>
-          </div>
-          <div class = "projectImageBox grey absolute fill">
-            <img class = "border" src = "images/jan.png"/>
 </div>
         </div>
         <div class = "side-small blue">
