--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body{
             margin: 0;
-            font-family: sans-serif;
+            font-family: monospace;
         }
 
         .page{
